--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div class="header">
         <img id=logo src="ressources\logoretro.png" alt="Logo du bot version retro">
     </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 1" preserveAspectRatio="none">
+        <polygon points="100 0 100 4 0 0" />
+      </svg>
 </body>
 
 </html>
